# swarmbus

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: agent-onboarding.md  cross-machine-tailscale.md  notification-patterns.md  openclaw-bridge.md  openclaw-wake.md  post-ship-backlog.md
docs/superpowers/plans/: 2026-04-14-agentbus-build.md
examples/: claude-code-wake.sh  cross_machine.py  openclaw-bridge-wake.sh  openclaw-bridge.mjs  openclaw-wake.sh  planner_coder_local.py  sparrow_wren_local.py
scripts/: bench_wake.py  inbox-watch.sh  install-systemd.sh  setup-cc-plugin.sh  setup-mosquitto.sh  setup-openclaw-plugin.sh
skills/using-agentbus/: SKILL.md
skills/using-swarmbus/: SKILL.md
src/agentbus/: __init__.py  archive.py  bus.py  cli.py  mcp_server.py  message.py
src/agentbus/handlers/: __init__.py  base.py  direct_invoke.py
src/swarmbus/: __init__.py  _compat.py  bus.py  cli.py  mcp_server.py  message.py
src/swarmbus/handlers/: __init__.py  direct_invoke.py  file_bridge.py  persistent.py
src/swarmbus/skills/using-swarmbus/: SKILL.md
systemd/: agentbus-agent.service.template  swarmbus-agent.service.template
tests/: test_archive.py  test_bus.py  test_bus_methods.py  test_cli.py  test_init.py  test_integration.py  test_mcp_server.py  test_message.py
tests/handlers/: test_direct_invoke.py  test_file_bridge.py  test_persistent.py
