[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmbus-py"
version = "0.1.4"
description = "Reactive pub/sub messaging for AI agents via MQTT"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mike Pesavento"}]
keywords = ["mqtt", "agents", "messaging", "pub-sub", "async", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "aiomqtt>=2.0,<3.0",
    "aiosqlite>=0.19,<1.0",
    "pydantic>=2.0,<3.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
]

[project.urls]
Homepage = "https://swarmbus.dev"
Repository = "https://github.com/mpesavento/swarmbus"
Documentation = "https://swarmbus.dev/docs"

[project.scripts]
swarmbus = "swarmbus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swarmbus"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
